[tool.poetry]
name = "spaceship"
version = "0.2.1"
description = "game with spaceship"
authors = ["Mark Raid <mark.raid@yandex.ru>"]

[tool.poetry.dependencies]
python = "3.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
